--- a/HealthRecordApp.API/appsettings.json
+++ b/HealthRecordApp.API/appsettings.json
@@ -9,5 +9,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWTConfig": {
+    "Secret": "eXRoRkpvR3FIRG1XdkFQU1p1Q1h3T2QwSmxWcTRDdjY="
+  }
 }
