--- a/HealthRecordApp.API/appsettings.json
+++ b/HealthRecordApp.API/appsettings.json
@@ -11,6 +11,7 @@
   },
   "AllowedHosts": "*",
   "JWTConfig": {
-    "Secret": "eXRoRkpvR3FIRG1XdkFQU1p1Q1h3T2QwSmxWcTRDdjY="
+    "Secret": "eXRoRkpvR3FIRG1XdkFQU1p1Q1h3T2QwSmxWcTRDdjY=",
+     "ExpiryTime": "00:00:30"
   }
 }
